--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         </form>
         <ul>
             <% items.forEach(function(item) { %>
-            <li><%= item.task %></li>
+            <li><%= item.text %></li>
             <% }) %>
         </ul>
     </body>
